@@ -1,3 +1,8 @@
+2015-04-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* hashcash.el (hashcash-insert-payment-async-2): Save the mark when
+	altering the buffer.
+
 2015-04-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-uu.el (gnus-uu-save-article):
